k8s/web-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
spec:
  type: LoadBalancer
  selector:
    name: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001
